# obsidian-dual-agent

./: .gitattributes  .gitignore  LICENSE  README.md  README.zh-CN.md  falsify.py  lychee.toml  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: falsify.yml  link-check.yml
assets/: flow-card.html  make-demo-gif.py
demo-vault/: .gitignore  AGENTS.md  README.md
demo-vault/inbox/: raw-links.md
demo-vault/logs/: changelog.md  decisions.md
demo-vault/reports/: final-report.md
demo-vault/research/: 00-brief.md  01-sources.md  02-agent-a-draft.md  03-agent-b-audit.md  04-conflicts.md  05-resolutions.md
docs/: 01-architecture.md  01-architecture.zh-CN.md  02-setup.md  02-setup.zh-CN.md  03-collaboration.md  03-collaboration.zh-CN.md  04-troubleshooting.md  04-troubleshooting.zh-CN.md  05-adversarial-review.md  05-adversarial-review.zh-CN.md
examples/: cross-model-rpc.md  wrong-tool-right-data.md
examples/cases/: README.md  market-research-sample.md  reversal-sample-run.md  reversal-sample.md  tech-selection-sample.md
examples/comparison-case-study/: 01-agent-a-draft-excerpt.md  02-agent-b-audit-excerpt.md  03-conflict-log.md  04-resolution-log.md  05-final-excerpt.md  06-real-review-deepseek.md  README.md
examples/real-cases/: 01-fictional-horizon-quant-audit.md  01-fictional-horizon-quant-audit.zh-CN.md
templates/: .gitignore  AGENTS.md  conflict-log.md  github-action-falsify.yml  kickoff.md  obsidian-git-settings.md  precondition-checklist.md  resolution-log.md  retro.md  step-verify.sh
templates/prompts/: agent-a.md  agent-b.md  human.md
tests/: test_falsify_core.py  test_web.py
web/: README.md  serve.py
