[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "falsify"
version = "0.1.0"
description = "证伪 — give AI output a verdict before you trust it. An Agent Review Kit CLI."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "shi275773124" }]
keywords = ["ai", "agents", "review", "hallucination", "llm", "ci", "audit"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
]

[project.urls]
Homepage = "https://github.com/shi275773124/obsidian-dual-agent"

[project.scripts]
falsify = "falsify:main"

[tool.setuptools]
py-modules = ["falsify"]
