[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "falsify"
dynamic = ["version"]
description = "证伪 — give AI output a verdict before you trust it. An Agent Review Kit CLI."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "shi275773124" }]
keywords = ["ai", "agents", "review", "hallucination", "llm", "ci", "audit"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.urls]
Homepage = "https://github.com/shi275773124/Falsify"

[project.scripts]
falsify = "falsify:main"

[tool.setuptools]
py-modules = ["falsify"]

[tool.setuptools.dynamic]
version = { attr = "falsify.VERSION" }
